--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	
 	<div id="spotlight" class="animated fadeIn">
 		<div id="home-center">
-			<h1 id="home-title">柚子</h1>
+			<h1 id="home-title"><big>柚子</big></h1>
 		        <br>
 			<p id="home-subtitle">摸爬滚打，死磕到底</p>
 			<br>
