--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	
 	<div id="spotlight" class="animated fadeIn">
 		<div id="home-center">
-			<h1 id="home-title"><big>柚子</big></h1>
+			<h1 id="home-title"><huge>个人博客by柚子</huge></h1>
 		        <br>
 			<br>
 			<br>
@@ -47,7 +47,7 @@
 			</div>
 			<nav id="home-nav" class="site-nav">
 				<br>
-				<a href="https://ziyoou.github.io/posts/">个人博客by柚子</a>
+				<a href="https://ziyoou.github.io/posts/">博客</a>
 				<br>
 				<a href="https://ziyoou.github.io/about-hugo/">关于</a>
 
